--- a/docker/Dockerfile.ci_cpu
+++ b/docker/Dockerfile.ci_cpu
@@ -1,8 +1,24 @@
-From dgllib/dgl-sagemaker-cpu:dgl_0.4_pytorch_1.2.0_rdkit
+# From dgllib/dgl-sagemaker-cpu:dgl_0.4_pytorch_1.2.0_rdkit
 
-RUN pip uninstall -y scikit-learn
-RUN pip install scikit-learn==0.22.2.post1
-RUN pip uninstall -y pandas
-RUN pip install pandas==0.24.2
-RUN pip uninstall -y dgl
-RUN pip install --pre dgl
+# RUN pip uninstall -y scikit-learn
+# RUN pip install scikit-learn==0.22.2.post1
+# RUN pip uninstall -y pandas
+# RUN pip install pandas==0.24.2
+# RUN pip uninstall -y dgl
+# RUN pip install --pre dgl
+
+# CI docker CPU env
+# Adapted from github.com/dmlc/tvm/docker/Dockerfile.ci_cpu
+FROM ubuntu:16.04
+
+RUN apt-get update --fix-missing
+
+COPY install/ubuntu_install_core.sh /install/ubuntu_install_core.sh
+RUN bash /install/ubuntu_install_core.sh
+
+COPY install/ubuntu_install_build.sh /install/ubuntu_install_build.sh
+RUN bash /install/ubuntu_install_build.sh
+
+# python
+COPY install/ubuntu_install_conda.sh /install/ubuntu_install_conda.sh
+RUN bash /install/ubuntu_install_conda.sh
