--- a/docker/Dockerfile.ci_gpu
+++ b/docker/Dockerfile.ci_gpu
@@ -1,8 +1,34 @@
-From dgllib/dgl-sagemaker-gpu:dgl_0.4_pytorch_1.2.0_rdkit
+# CI docker GPU env
+FROM nvidia/cuda:10.1-cudnn7-devel-ubuntu16.04
 
-RUN pip uninstall -y scikit-learn
-RUN pip install scikit-learn==0.22.2.post1
-RUN pip uninstall -y pandas
-RUN pip install pandas==0.24.2
-RUN pip uninstall -y dgl-cu100
-RUN pip install --pre dgl-cu101
+RUN apt-get update --fix-missing
+
+COPY install/ubuntu_install_core.sh /install/ubuntu_install_core.sh
+RUN bash /install/ubuntu_install_core.sh
+
+COPY install/ubuntu_install_build.sh /install/ubuntu_install_build.sh
+RUN bash /install/ubuntu_install_build.sh
+
+# python
+COPY install/ubuntu_install_conda.sh /install/ubuntu_install_conda.sh
+RUN bash /install/ubuntu_install_conda.sh
+
+ENV CONDA_ALWAYS_YES="true"
+
+COPY install/conda_env/torch_gpu.yml /install/conda_env/torch_gpu.yml
+RUN ["/bin/bash", "-i", "-c", "conda env create -f /install/conda_env/torch_gpu.yml"]
+RUN . /opt/conda/etc/profile.d/conda.sh && \
+    conda activate pytorch-ci && \
+    conda install -c conda-forge rdkit==2018.09.3
+
+ENV CONDA_ALWAYS_YES=
+
+# Environment variables
+ENV PATH=/usr/local/nvidia/bin:${PATH}
+ENV PATH=/usr/local/cuda/bin:${PATH}
+ENV CPLUS_INCLUDE_PATH=/usr/local/cuda/include:${CPLUS_INCLUDE_PATH}
+ENV C_INCLUDE_PATH=/usr/local/cuda/include:${C_INCLUDE_PATH}
+ENV LIBRARY_PATH=/usr/local/cuda/lib64:/usr/local/nvidia/lib64:${LIBRARY_PATH}
+ENV LD_LIBRARY_PATH=/usr/local/cuda/lib64:/usr/local/nvidia/lib64:${LD_LIBRARY_PATH}
+ENV CUDA_VISIBLE_DEVICES=0
+ENV TF_FORCE_GPU_ALLOW_GROWTH=true
