Add graph construction for PotentialNet

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,13 @@ dgllife.egg-info/
 docs/build
 docs/source/tutorials
 docs/source/generated
+
+# .DS_Store
+examples/.DS_Store
+python/.DS_Store
+python/dgllife/.DS_Store
+.DS_Store
+
+# build/ and dist/
+python/dist/dgllife-0.2.3-py3.7.egg
+python/build/
