ignore jupyter notebooks

--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,12 @@ docs/source/tutorials
 docs/source/generated
 
 # .DS_Store
-examples/.DS_Store
-python/.DS_Store
-python/dgllife/.DS_Store
-.DS_Store
+# examples/.DS_Store
+# python/.DS_Store
+# python/dgllife/.DS_Store
+*.DS_Store
+.vscode/
 
 # build/ and dist/
-python/dist/dgllife-0.2.3-py3.7.egg
+python/dist/
 python/build/
