PotentialNet model and graph constructor (#77)
* Add graph construction for PotentialNet

* ignore jupyter notebooks

* Fix graph constrution

Set "remove_hs=True", to make sure the node numbers are consistent for diferent graphs.
Fix dataset download overwrite.

* Fix model

etypes for stage 1 are now sucessfully implemented

* Attempt to incorporate PotentialNet into binding_affnity_prediction/main.py

To fix: loss function error; args in configure.py

* update deprecated functions

* Handle batched graph

Now it's able to train by calling main.py

* Handles etypes with torch

* add device info to etypes

* Update args and fix for eval_epoch

to be tested on gpu

* Set explicit_hydrogen in mol_to_graph to None

No longer apply snitize and remove_hs when loading from PDBBind
Also updated deprecated functions

* Hyperparameters update & minor fixes

* Add stage 2 etypes

Digitize the edge distances [0.0, 2.0, 3.5, 4.0, 5.0] into 4 type of edges in stage 2

* Customized Gated_Graph_Conv for stage 1; Customize distance bins for stage 2 edge types

* Add validation for main.py; Add refined_random configure

* stage 3 update: customized hidden dimension

* reduce features and add hyperparameters search

* Add bond types to stage 2

* add bond types and bonds (from bigraph) to stage 2; add max_neighbor as hyperparameter

* Set core to be the test set; eval on each epoch; hyperparameter update

* add eval (test and val) at each epoch; save the scores at each epoch to file

* attempt to test for scaffold split, need to be fixed

* Parallel graph construction; add stratified and scaffold split for potentialnet

* Fix scaffold split; Attempt to fix multiprocessing on Linux

* Fix Tensor.nonzero() DeprecationWarning

* Add PDBBind v2007; Reorganize pdbbind.py; Write docstrings

* intial run on v2007

* add env specs

* add new agrusment whether to remove core set from refined set

* Update python/dgllif

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,13 @@ docs/build
 docs/source/tutorials
 docs/source/generated
 
+# .DS_Store
+# examples/.DS_Store
+# python/.DS_Store
+# python/dgllife/.DS_Store
+*.DS_Store
+.vscode/
+
 # Installation from source
 python/build/
 python/dist/
